exports[`Gallery Component creates full-sized, titled images of bunbuns with descriptions 1`] = `
<div>
  <h4>
    Baby Bunny Goes Flop
  </h4>
  <img
    alt="Baby Bunny Goes Flop"
    height="100px"
    src="https://s-media-cache-ak0.pinimg.com/736x/16/4e/8a/164e8aff9e9744e0062c9964d65da48b.jpg" />
</div>
`;

exports[`List Component creates a bunnylist with title, link, and description of picture 1`] = `
<div>
  <h4>
    Baby Bunny Goes Flop
  </h4>
  <a
    href="https://s-media-cache-ak0.pinimg.com/736x/16/4e/8a/164e8aff9e9744e0062c9964d65da48b.jpg">
    See Here!
  </a>
  <p>
    Adorable bunny flopped over on its side
  </p>
</div>
`;

exports[`List Component creates small titled images of babybunbuns 1`] = `
<div>
  <h4>
    Baby Bunny Goes Flop
  </h4>
  <a
    href="https://s-media-cache-ak0.pinimg.com/736x/16/4e/8a/164e8aff9e9744e0062c9964d65da48b.jpg">
    See Here!
  </a>
  <p>
    Adorable bunny flopped over on its side
  </p>
</div>
`;

exports[`Overarching ImageGallery Component manages state 1`] = `
<div>
  <Selector
    handleClick={[Function]} />
  <View
    babyBunBuns={
      Array [
        Object {
          "description": "Adorable bunny flopped over on its side",
          "title": "Baby Bunny Goes Flop",
          "url": "https://s-media-cache-ak0.pinimg.com/736x/16/4e/8a/164e8aff9e9744e0062c9964d65da48b.jpg",
        },
        Object {
          "description": "Baby bunny goes shopping and only gets the essentials",
          "title": "Bringin Home the Bacon",
          "url": "http://www.oukongstick.com/wp-content/uploads/2016/09/3-42.jpg",
        },
        Object {
          "description": "Baby bunnies inside of drinking glasses",
          "title": "Cruel, or Cute?",
          "url": "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQd-m0xBUS65gRgOUrMfk5CQW8b-pvAU6XE6CpDPgy2DqQx39ozEA",
        },
      ]
    }
    viewStyle={null} />
</div>
`;

exports[`Selector component creates buttons 1`] = `
<div>
  <button
    onClick={[Function]}>
    Thumbnail View
  </button>
  <button
    onClick={[Function]}>
    List View
  </button>
  <button
    onClick={[Function]}>
    Gallery View
  </button>
</div>
`;

exports[`Thumbnail Component creates small titled images of babybunbuns 1`] = `
<div>
  <h4>
    Baby Bunny Goes Flop
  </h4>
  <img
    alt="Baby Bunny Goes Flop"
    height="100px"
    src="https://s-media-cache-ak0.pinimg.com/736x/16/4e/8a/164e8aff9e9744e0062c9964d65da48b.jpg" />
</div>
`;

exports[`View Component toggles view style 1`] = `
<p>
  Click a Button to Get Started
</p>
`;
